# aoc

./: Cargo.toml  README.md
deno/: README.md  util.ts
deno/year_2015/: day_01_bench.ts  day_01_test.ts  day_02_bench.ts  day_02_test.ts  day_03_bench.ts  day_03_test.ts  day_04_bench.ts  day_04_test.ts  day_05_bench.ts  day_05_test.ts  day_06_bench.ts  day_06_test.ts  day_07_bench.ts  day_07_test.ts  day_08_bench.ts  day_08_test.ts  day_09_bench.ts  day_09_test.ts  day_10_bench.ts  day_10_test.ts  day_11_bench.ts  day_11_test.ts  day_12_bench.ts  day_12_test.ts  day_13_bench.ts  day_13_test.ts  day_14_bench.ts  day_14_test.ts  day_15_bench.ts  day_15_test.ts  day_16_bench.ts  day_16_test.ts  day_17_bench.ts  day_17_test.ts  day_18_bench.ts  day_18_test.ts  day_19_bench.ts  day_19_test.ts  day_20_bench.ts  day_20_test.ts  (+10 more)
deno/year_2016/: day_01_bench.ts  day_01_test.ts  day_02_bench.ts  day_02_test.ts  day_03_bench.ts  day_03_test.ts  day_04_bench.ts  day_04_test.ts  day_05_bench.ts  day_05_test.ts  day_06_bench.ts  day_06_test.ts  day_07_bench.ts  day_07_test.ts  day_08_bench.ts  day_08_test.ts  day_09_bench.ts  day_09_test.ts  day_10_bench.ts  day_10_test.ts  day_11_bench.ts  day_11_test.ts  day_12_bench.ts  day_12_test.ts  day_13_bench.ts  day_13_test.ts  day_14_bench.ts  day_14_test.ts  day_15_bench.ts  day_15_test.ts  day_16_bench.ts  day_16_test.ts  day_17_bench.ts  day_17_test.ts  day_18_bench.ts  day_18_test.ts  day_19_bench.ts  day_19_test.ts  day_20_bench.ts  day_20_test.ts  (+10 more)
deno/year_2017/: day_01_bench.ts  day_01_test.ts  day_02_bench.ts  day_02_test.ts  day_03_bench.ts  day_03_test.ts  day_04_bench.ts  day_04_test.ts  day_05_bench.ts  day_05_test.ts  day_06_bench.ts  day_06_test.ts  day_07_bench.ts  day_07_test.ts  day_08_bench.ts  day_08_test.ts  day_09_bench.ts  day_09_test.ts  day_10_bench.ts  day_10_test.ts  day_11_bench.ts  day_11_test.ts  day_12_bench.ts  day_12_test.ts  day_13_bench.ts  day_13_test.ts  day_14_bench.ts  day_14_test.ts  day_15_bench.ts  day_15_test.ts  day_16_bench.ts  day_16_test.ts  day_17_bench.ts  day_17_test.ts  day_18_bench.ts  day_18_test.ts  day_19_bench.ts  day_19_test.ts  day_20_bench.ts  day_20_test.ts  (+11 more)
deno/year_2018/: day_01_bench.ts  day_01_test.ts  day_02_bench.ts  day_02_test.ts  day_03_bench.ts  day_03_test.ts  day_04_bench.ts  day_04_test.ts  day_05_bench.ts  day_05_test.ts  day_06_bench.ts  day_06_test.ts  (+2 more)
go/: go.work  go.work.sum
python/: .gitignore  README.md  pyproject.toml
python/year_2015/: day_01.py  day_02.py  day_03.py  day_04.py  day_05.py  day_06.py  day_07.py  day_08.py  day_09.py  day_10.py  day_11.py  day_12.py  day_13.py  day_14.py  day_15.py  day_16.py  day_17.py  day_18.py  day_19.py  day_20.py  day_21.py  day_22.py  day_23.py  day_24.py  day_25.py  pyproject.toml  test_data
python/year_2016/: day_01.py  day_02.py  day_03.py  day_04.py  day_05.py  day_06.py  day_07.py  day_08.py  day_16.py  pyproject.toml  test_data
python/year_2017/: day_01.py  day_02.py  day_03.py  day_04.py  day_05.py  day_06.py  day_07.py  day_09.py  day_10.py  day_11.py  day_12.py  day_13.py  day_15.py  pyproject.toml
python/year_2020/: day_01.py  day_02.py  day_03.py  day_04.py  day_05.py  day_06.py  day_07.py  day_08.py  day_09.py  day_10.py  day_12.py  day_13.py  pyproject.toml  test_data
python/year_2022/: day_01.py  pyproject.toml
python/year_2023/: day_01.py  day_02.py  day_03.py  day_04.py  day_05.py  day_06.py  day_07.py  day_08.py  day_09.py  day_10.py  day_11.py  day_12.py  day_13.py  day_14.py  day_15.py  day_16.py  day_17.py  day_18.py  day_19.py  day_20.py  day_21.py  day_22.py  day_23.py  day_24.py  day_25.py  pyproject.toml  test_data
rust/: Cargo.toml  README.md
rust/year_2018/: Cargo.toml  README.md  test_data
rust/year_2018/src/: day_01.rs  day_02.rs  day_03.rs  day_04.rs  day_05.rs  day_06.rs  day_07.rs  day_08.rs  day_09.rs  day_10.rs  day_11.rs  day_12.rs  day_13.rs  day_14.rs  day_15.rs  day_16.rs  day_17.rs  day_18.rs  day_19.rs  day_20.rs  day_21.rs  day_22.rs  day_23.rs  day_24.rs  day_25.rs  lib.rs
rust/year_2022/: Cargo.toml  test_data
rust/year_2022/src/: day_01.rs  day_02.rs  day_03.rs  day_04.rs  day_05.rs  day_06.rs  day_07.rs  day_08.rs  day_09.rs  day_10.rs  day_11.rs  day_12.rs  day_13.rs  day_14.rs  day_15.rs  day_16.rs  day_17.rs  day_18.rs  day_19.rs  day_20.rs  day_21.rs  day_22.rs  day_23.rs  day_24.rs  day_25.rs  lib.rs
src/: lib.rs  util.rs
year_2020/: Cargo.toml
year_2021/: Cargo.toml
year_2022/: Cargo.toml
(+419 files in other folders)
