[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "year-2016"
version = "0.1.0"
description = "Advent of Code 2016 solutions."
requires-python = ">=3.10"
dependencies = ["iteration-utilities", "more-itertools", "numpy"]

[dependency-groups]
dev = ["pytest"]

[tool.setuptools.packages.find]
where = ["."]
include = ["year_2016"]
