[package]
name = "year_2018"
version = "0.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ahash = "0.8"
chrono = "0.4"
itertools = "0.10"
lazy_static = "1.4"
num = "0.4"
regex = { version = "1.7", features = ["unicode-perl"] }
test-case = "3.0"
