[package]
name = "year_2022"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
itertools = "0.14.0"
lazy_static = "1.5.0"
ndarray = "0.17.0"
num = "0.4.3"
regex = { version = "1.12.2", features = ["unicode-perl"] }
test-case = "3.3.1"
phf = { version = "0.13.1", features = ["macros"] }
serde_json = "1.0.145"
hashbrown = "0.16.0"
