[package]
name = "year_2022"
version = "0.1.0"
edition = "2024"

[dependencies]
itertools = "0.14.0"
ndarray = "0.17.0"
num = "0.4.3"
regex = { version = "1.12.2", features = ["unicode-perl"] }
phf = { version = "0.13.1", features = ["macros"] }
serde_json = "1.0.145"
hashbrown = "0.16.1"

[dev-dependencies]
test-case = "3.3.1"
